--- a/SRIP/Codes/exp5.html
+++ b/SRIP/Codes/exp5.html
@@ -125,6 +125,9 @@
 			</div>
 			<p><button id = "calculate-energy">CALCULATE ENERGY</button></p>
 			<p><button id = "final" style = 'visibility: hidden;'>SHOW THE FINAL MINIMUM ENERGY STATES</button></p>
+			<p id = "show-final"></p>
+			<p id = "show-final1"></p>
+			<p id = "show-final2"></p>
 		</div>
 	</div>
 
