--- a/SRIP/Codes/exp5.html
+++ b/SRIP/Codes/exp5.html
@@ -69,6 +69,31 @@
 		<img src = "3unit.png" alt = "3 node graph" class = "image">
 	</div>
 
+	<p></p>
+
+	<div class = "row" id = "explain">
+		<div class = "column-5">
+			<p><h2>Hamming Distance</h2></p>
+			<p>Hamming distance is often calulated with two text or numeric input of same size. The number of place in which one value is differing from other is known as hamming distance or in better words "How many minimum places need to change in one input to get second input.".</p>
+
+			<p>The most common example of hamming distance is that it is used in computer networking. The number of bits get corrupted while transmitting via a network is calculated by hamming distance.</p> 
+
+			<p><h3>How it is calculated?</h3></p> 
+			<p>1. We traverse form first to last bit of both the imput.</p>
+			<p>2. While iteration we check whether the input bit of both the places are same or not.</p>
+			<p>3. If the bits are same we go to the next bit to check.</p>
+			<p>4. If the bits are having different values that the hamming distance is increased by one.</p> 
+
+			<p><h3>Example</h3></p>
+			<p><h4>1. a) America b) Amreica</h4></p> 
+			<p>Hamming Distance = 2 (2nd and 3rd position are different).</p> 
+			<p><h4>2. a) Field b) Feild</h4></p> 
+			<p>Hamming Distance = 2 (2nd and 3rd position are different).</p> 
+			<p><h4>3. a) 0110101101001 b) 0111101001101</h4></p> 
+			<p>Hamming Distance = 3 (4th,9th and 11th position are different).</p>
+		</div>
+	</div>
+
 	<div class = "row">
 		<div class = "column-3" id = "column3">
 			<div class = "column-0">
