--- a/SRIP/Codes/exp5.html
+++ b/SRIP/Codes/exp5.html
@@ -79,10 +79,11 @@
 			<p>The most common example of hamming distance is that it is used in computer networking. The number of bits get corrupted while transmitting via a network is calculated by hamming distance.</p> 
 
 			<p><h3>How it is calculated?</h3></p> 
-			<p>1. We traverse form first to last bit of both the imput.</p>
-			<p>2. While iteration we check whether the input bit of both the places are same or not.</p>
-			<p>3. If the bits are same we go to the next bit to check.</p>
-			<p>4. If the bits are having different values that the hamming distance is increased by one.</p> 
+			<p>1. We traverse from the first to last bit/word/number of both the inputs. Initially, the hamming distance is set to zero.</p>
+			<p>2. We begin to traverse both the inputs from the beginning and check one by one the bit/word/number of both the inputs. While iteration we check whether the input bit/word/number of both the places are same or not.</p>
+			<p>3. If the bits/words/numbers are same, we go to the next bit/word/number of both the inputs.</p>
+			<p>4. If the bits/words/numbers are having different values then the hamming distance is increased by one.</p> 
+			<p> 5. The final hamming distance value is the answer.</p>
 
 			<p><h3>Example</h3></p>
 			<p><h4>1. a) America b) Amreica</h4></p> 
